-Nesnelerin Componentleri oluşturuldu. -Nesnelerin Servisleri oluşturuldu.

--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -97,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0d4e4bde-0101-4224-b495-c1df911eadfc"
   }
 }
